[gd_scene load_steps=9 format=3 uid="uid://xryyxhv5ib3h"]

[ext_resource type="PackedScene" uid="uid://4lwv2ug5j5j6" path="res://scences/ui/player_card/card_menu_ui.tscn" id="1_jl4mf"]
[ext_resource type="Script" path="res://scences/ui/battle/card_rewards.gd" id="1_vmbv4"]
[ext_resource type="Resource" uid="uid://ccjsu4qoghdrb" path="res://characters/machine/cards/common/power_strike.tres" id="2_bax7w"]
[ext_resource type="Script" path="res://custom_resources/card.gd" id="2_exbs0"]
[ext_resource type="PackedScene" uid="uid://n3v1mvmtakc" path="res://scences/ui/player_card/card_tooltip.tscn" id="2_k2vqf"]
[ext_resource type="Resource" uid="uid://073voiuhw5gi" path="res://characters/machine/cards/common/missile_launcher.tres" id="3_kg0bk"]
[ext_resource type="Resource" uid="uid://dprpiekopnhe0" path="res://characters/machine/cards/common/shields.tres" id="4_p1fof"]
[ext_resource type="Resource" uid="uid://brs0hub03o0k0" path="res://characters/machine/cards/common/laser.tres" id="5_7yg2y"]

[node name="CardRewards" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)
script = ExtResource("1_vmbv4")
rewards = Array[ExtResource("2_exbs0")]([ExtResource("2_bax7w"), ExtResource("3_kg0bk"), ExtResource("4_p1fof"), ExtResource("5_7yg2y")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -28.0
offset_right = 86.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Cards" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 14

[node name="CardMenuUI" parent="VBoxContainer/Cards" instance=ExtResource("1_jl4mf")]
layout_mode = 2

[node name="CardMenuUI2" parent="VBoxContainer/Cards" instance=ExtResource("1_jl4mf")]
layout_mode = 2

[node name="CardMenuUI3" parent="VBoxContainer/Cards" instance=ExtResource("1_jl4mf")]
layout_mode = 2

[node name="CardMenuUI4" parent="VBoxContainer/Cards" instance=ExtResource("1_jl4mf")]
layout_mode = 2

[node name="SkipButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 14)
layout_mode = 2
size_flags_horizontal = 4
text = "Skip rewards"

[node name="CardTooltip" parent="." instance=ExtResource("2_k2vqf")]
visible = false
layout_mode = 1
